--- a/AdoptMe2/app/src/main/res/values/strings.xml
+++ b/AdoptMe2/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="telefon">Telèfon</string>
     <string name="email">Email</string>
     <string name="action_OK">OK</string>
+    <string name="action_filtra">Filtra</string>
 </resources>
