--- a/AdoptMe2/app/src/main/res/values/strings.xml
+++ b/AdoptMe2/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="action_settings">Settings</string>
     <string name="descripcio">Descripció</string>
     <string name="edat">Edat</string>
-    <string name="anys">Anys</string>
+    <string name="anys">Anys :</string>
     <string name="desconegut">Desconegut</string>
     <string name="sexe">Sexe</string>
     <string name="famella">Famella</string>
@@ -17,8 +17,4 @@
     <string name="action_filtra">Filtra</string>
     <string name="femella">Femella</string>
     <string name="localització">Localització</string>
-    <string name="min">min</string>
-    <string name="max">max</string>
-    <string name="guió">-</string>
-
-</resources>
+   </resources>
