--- a/AdoptMe2/app/src/main/res/values/strings.xml
+++ b/AdoptMe2/app/src/main/res/values/strings.xml
@@ -1,20 +1,21 @@
 <resources>
     <string name="app_name">AdoptMe</string>
     <string name="action_settings">Settings</string>
-    <string name="descripcio">Descripció</string>
-    <string name="edat">Edat</string>
-    <string name="anys">Anys :</string>
-    <string name="desconegut">Desconegut</string>
-    <string name="sexe">Sexe</string>
-    <string name="famella">Famella</string>
-    <string name="mascle">Mascle</string>
-    <string name="distancia">Distancia</string>
-    <string name="contacte">Informació de contacte:</string>
-    <string name="nom">Nom</string>
-    <string name="telefon">Telèfon</string>
+    <string name="descripcio">Description</string>
+    <string name="edat">Age :</string>
+    <string name="anys">Years</string>
+    <string name="desconegut">Unknown</string>
+    <string name="sexe">Sex</string>
+    <string name="mascle">Male</string>
+    <string name="femella">Female</string>
+    <string name="distancia">Distance</string>
+    <string name="contacte">Contact info:</string>
+    <string name="nom">Name</string>
+    <string name="telefon">Phone</string>
     <string name="email">Email</string>
     <string name="action_OK">OK</string>
-    <string name="action_filtra">Filtra</string>
-    <string name="femella">Femella</string>
-    <string name="localització">Localització</string>
-   </resources>
+    <string name="action_filtra">Filter</string>
+    <string name="localització">Location</string>
+    <string name="omple">Fill the missing fields</string>
+    <string name="missingimg">The image is missing</string>
+</resources>
