--- a/AdoptMe2/app/src/main/res/values/strings.xml
+++ b/AdoptMe2/app/src/main/res/values/strings.xml
@@ -18,4 +18,7 @@
     <string name="localització">Location</string>
     <string name="omple">Fill the missing fields</string>
     <string name="missingimg">The image is missing</string>
+    <string name="adoptme">Adopt Me</string>
+    <string name="cognom">Surname</string>
+    <string name="ok">OK</string>
 </resources>
