Afegida la competibilitat amb APIs inferiors a la 23

--- a/AdoptMe2/app/src/main/res/values/strings.xml
+++ b/AdoptMe2/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@
     <string name="usrnotfound">User not found</string>
     <string name="adoptme">Adopt Me</string>
     <string name="cognom">Surname</string>
-    <string name="ok">OK</string>
+    <string name="next">NEXT</string>
+    <string name="writenotallowed">The app will not work without Write permissions</string>
 </resources>
